--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.16.3",
     "mongoose": "^5.1.6",
     "nodemon": "^1.17.5",
+    "request": "^2.87.0",
     "watson-developer-cloud": "^3.5.0"
   },
   "devDependencies": {
